# aws_get_secret_value

./: Cargo.toml
src/: lib.rs
