[package]
name = "aws_get_secret_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.1"
aws-sdk-secretsmanager = "0.26.0"
serde_json = "1.0.96"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
