[package]
name = "aws_get_secret_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.1"
aws-sdk-cognitoidentityprovider = "0.27.0"
aws-sdk-secretsmanager = "0.27.0"
base64 = "0.21.0"
hmac = "0.12.1"
reqwest = { versiont = "0.11.17", features = ["json"] }
sha2 = "0.10.6"
serde_json = "1.0.96"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
